AB#1062 Upgrade graphql-java-generator
Use the new, Spring-based version of the graphql-java-generator for
running our GraphQL API tests.