@@ -1,18 +1,10 @@
 package mil.dds.anet.test.resources;
 
-import static mil.dds.anet.test.resources.SubscriptionResourceTest.SUBSCRIPTION_TESTS;
-import static mil.dds.anet.test.resources.SubscriptionResourceTest.adminSubscriberUuid;
-import static mil.dds.anet.test.resources.SubscriptionResourceTest.createSubscription;
-import static mil.dds.anet.test.resources.SubscriptionResourceTest.deleteSubscription;
-import static mil.dds.anet.test.resources.SubscriptionResourceTest.getSubscribedObjectUuid;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.graphql_java_generator.exception.GraphQLRequestExecutionException;
-import com.graphql_java_generator.exception.GraphQLRequestPreparationException;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -42,48 +34,40 @@ import mil.dds.anet.test.client.Subscription;
 import mil.dds.anet.test.client.SubscriptionUpdate;
 import mil.dds.anet.test.client.SubscriptionUpdateSearchQueryInput;
 import mil.dds.anet.test.client.Task;
-import mil.dds.anet.test.client.util.QueryExecutor;
 import org.junit.jupiter.api.Test;
 
-public class SubscriptionUpdateResourceTest extends AbstractResourceTest {
+class SubscriptionUpdateResourceTest extends SubscriptionTestHelper {
 
   protected static final String FIELDS =
       "{ createdAt isNote updatedObjectType updatedObjectUuid updatedObject {"
           + " ... on Location { uuid } ... on Organization { uuid }"
           + " ... on Person { uuid } ... on Position { uuid }"
-          + " ... on Report { uuid } ... on Task { uuid } } subscription "
-          + SubscriptionResourceTest.FIELDS + " }";
+          + " ... on Report { uuid } ... on Task { uuid } } subscription " + SUBSCRIPTION_FIELDS
+          + " }";
 
-  @SuppressWarnings("serial")
-  private static final Map<String, Consumer<String>> UPDATERS =
-      new HashMap<String, Consumer<String>>() {
-        {
-          put(LocationDao.TABLE_NAME, SubscriptionUpdateResourceTest::updateLocation);
-          put(OrganizationDao.TABLE_NAME, SubscriptionUpdateResourceTest::updateOrganization);
-          put(PersonDao.TABLE_NAME, SubscriptionUpdateResourceTest::updatePerson);
-          put(PositionDao.TABLE_NAME, SubscriptionUpdateResourceTest::updatePosition);
-          put(ReportDao.TABLE_NAME, SubscriptionUpdateResourceTest::updateReport);
-          put(TaskDao.TABLE_NAME, SubscriptionUpdateResourceTest::updateTask);
-          put(AuthorizationGroupDao.TABLE_NAME,
-              SubscriptionUpdateResourceTest::updateAuthorizationGroup);
-        }
-      };
+  private final Map<String, Consumer<String>> UPDATERS = Map.of( //
+      LocationDao.TABLE_NAME, this::updateLocation, //
+      OrganizationDao.TABLE_NAME, this::updateOrganization, //
+      PersonDao.TABLE_NAME, this::updatePerson, //
+      PositionDao.TABLE_NAME, this::updatePosition, //
+      ReportDao.TABLE_NAME, this::updateReport, //
+      TaskDao.TABLE_NAME, this::updateTask, //
+      AuthorizationGroupDao.TABLE_NAME, this::updateAuthorizationGroup);
 
   @Test
-  public void testSubscriptionUpdate() {
+  void testSubscriptionUpdate() {
     // Create a report using the objects we are going to subscribe to
     final String reportUuid = createReport();
     // Subscribe jack to all object types, where for report we use the one we just created
-    final Map<String, Subscription> subscriptions = SUBSCRIPTION_TESTS.entrySet().stream()
-        .collect(Collectors.toMap(testCase -> testCase.getKey(),
-            testCase -> createTestSubscription(testCase.getKey(), testCase.getValue(),
-                reportUuid)));
+    final Map<String, Subscription> subscriptions = SUBSCRIPTION_TESTS.entrySet().stream().collect(
+        Collectors.toMap(Map.Entry::getKey, testCase -> createTestSubscription(testCase.getKey(),
+            testCase.getValue(), reportUuid)));
 
     // Check jack's subscription updates
     final AnetBeanList_SubscriptionUpdate jackSubscriptionUpdates =
-        getAllSubscriptionUpdates(jackQueryExecutor);
+        getAllSubscriptionUpdates(jackUser);
     assertThat(jackSubscriptionUpdates.getList()).noneMatch(su -> subscriptions.values().stream()
-        .filter(s -> s.getUuid().equals(su.getSubscription().getUuid())).findAny().isPresent());
+        .anyMatch(s -> s.getUuid().equals(su.getSubscription().getUuid())));
 
     // Update each subscribed object
     for (final Map.Entry<String, Subscription> e : subscriptions.entrySet()) {
@@ -100,28 +84,27 @@ public class SubscriptionUpdateResourceTest extends AbstractResourceTest {
     }
 
     // Delete jack's subscriptions
-    subscriptions.values().stream().forEach(
-        subscription -> deleteSubscription(jackMutationExecutor, subscription.getUuid(), false));
+    subscriptions.values()
+        .forEach(subscription -> deleteSubscription(jackUser, subscription.getUuid(), false));
 
     // Delete the report
     deleteReport(reportUuid);
   }
 
   @Test
-  public void testSubscriptionUpdateWithNote() {
+  void testSubscriptionUpdateWithNote() {
     // Create a report using the objects we are going to subscribe to
     final String reportUuid = createReport();
     // Subscribe jack to all object types, where for report we use the one we just created
-    final Map<String, Subscription> subscriptions = SUBSCRIPTION_TESTS.entrySet().stream()
-        .collect(Collectors.toMap(testCase -> testCase.getKey(),
-            testCase -> createTestSubscription(testCase.getKey(), testCase.getValue(),
-                reportUuid)));
+    final Map<String, Subscription> subscriptions = SUBSCRIPTION_TESTS.entrySet().stream().collect(
+        Collectors.toMap(Map.Entry::getKey, testCase -> createTestSubscription(testCase.getKey(),
+            testCase.getValue(), reportUuid)));
 
     // Check jack's subscription updates
     final AnetBeanList_SubscriptionUpdate jackSubscriptionUpdates =
-        getAllSubscriptionUpdates(jackQueryExecutor);
+        getAllSubscriptionUpdates(jackUser);
     assertThat(jackSubscriptionUpdates.getList()).noneMatch(su -> subscriptions.values().stream()
-        .filter(s -> s.getUuid().equals(su.getSubscription().getUuid())).findAny().isPresent());
+        .anyMatch(s -> s.getUuid().equals(su.getSubscription().getUuid())));
 
     // Add a note to each subscribed object
     final List<Note> notes = new ArrayList<>();
@@ -135,11 +118,11 @@ public class SubscriptionUpdateResourceTest extends AbstractResourceTest {
     }
 
     // Delete jack's subscriptions
-    subscriptions.values().stream().forEach(
-        subscription -> deleteSubscription(jackMutationExecutor, subscription.getUuid(), false));
+    subscriptions.values()
+        .forEach(subscription -> deleteSubscription(jackUser, subscription.getUuid(), false));
 
     // Delete the notes
-    notes.stream().forEach(note -> deleteNote(note));
+    notes.forEach(this::deleteNote);
 
     // Delete the report
     deleteReport(reportUuid);
@@ -147,20 +130,17 @@ public class SubscriptionUpdateResourceTest extends AbstractResourceTest {
 
   // helper methods
 
-  protected static AnetBeanList_SubscriptionUpdate getAllSubscriptionUpdates(
-      final QueryExecutor queryExecutor) {
-    try {
-      final SubscriptionUpdateSearchQueryInput susqi =
-          SubscriptionUpdateSearchQueryInput.builder().withPageSize(0).build();
-      return queryExecutor.mySubscriptionUpdates(getListFields(FIELDS), susqi);
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+  protected AnetBeanList_SubscriptionUpdate getAllSubscriptionUpdates(final String username) {
+    final SubscriptionUpdateSearchQueryInput susqi =
+        SubscriptionUpdateSearchQueryInput.builder().withPageSize(0).build();
+    return withCredentials(username,
+        t -> queryExecutor.mySubscriptionUpdates(getListFields(FIELDS), susqi));
   }
 
   private Subscription createTestSubscription(final String subscribedObjectType,
       final String subscribedObjectUuid, final String reportUuid) {
-    return createSubscription(jackMutationExecutor, subscribedObjectType,
+    final String adminSubscriberUuid = admin.getPosition().getUuid();
+    return createSubscription(jackUser, subscribedObjectType,
         ReportDao.TABLE_NAME.equals(subscribedObjectType) ? reportUuid : subscribedObjectUuid,
         adminSubscriberUuid, false, false);
   }
@@ -176,9 +156,9 @@ public class SubscriptionUpdateResourceTest extends AbstractResourceTest {
     // * to the report's tasks
     // * to the report's location
     final AnetBeanList_SubscriptionUpdate jackSubscriptionUpdates2 =
-        getAllSubscriptionUpdates(jackQueryExecutor);
+        getAllSubscriptionUpdates(jackUser);
     final List<SubscriptionUpdate> newUpdates = jackSubscriptionUpdates2.getList().stream()
-        .filter(su -> su.getCreatedAt().isAfter(beforeUpdate)).collect(Collectors.toList());
+        .filter(su -> su.getCreatedAt().isAfter(beforeUpdate)).toList();
     for (final Subscription otherSubscription : subscriptions.values()) {
       final Optional<SubscriptionUpdate> opt = newUpdates.stream()
           .filter(su -> su.getSubscription().getUuid().equals(otherSubscription.getUuid()))
@@ -190,12 +170,12 @@ public class SubscriptionUpdateResourceTest extends AbstractResourceTest {
 
   private void checkOtherSubscriptionUpdates(final Map<String, Subscription> subscriptions,
       final Instant beforeUpdate, final String subscriptionUuid) {
-    // When updating other types of objects (i.e non-report, or adding a note to an object),
+    // When updating other types of objects (i.e. non-report, or adding a note to an object),
     // only subscriptions to that object get an update
     final AnetBeanList_SubscriptionUpdate jackSubscriptionUpdates2 =
-        getAllSubscriptionUpdates(jackQueryExecutor);
+        getAllSubscriptionUpdates(jackUser);
     final List<SubscriptionUpdate> newUpdates = jackSubscriptionUpdates2.getList().stream()
-        .filter(su -> su.getCreatedAt().isAfter(beforeUpdate)).collect(Collectors.toList());
+        .filter(su -> su.getCreatedAt().isAfter(beforeUpdate)).toList();
     for (final Subscription otherSubscription : subscriptions.values()) {
       final Optional<SubscriptionUpdate> opt = newUpdates.stream()
           .filter(su -> su.getSubscription().getUuid().equals(otherSubscription.getUuid()))
@@ -210,156 +190,117 @@ public class SubscriptionUpdateResourceTest extends AbstractResourceTest {
   }
 
   private Note createNote(final String subscribedObjectType, final String subscribedObjectUuid) {
-    try {
-      final GenericRelatedObjectInput nroInput =
-          GenericRelatedObjectInput.builder().withRelatedObjectType(subscribedObjectType)
-              .withRelatedObjectUuid(subscribedObjectUuid).build();
-      final NoteInput noteInput = NoteInput.builder().withType(NoteType.FREE_TEXT)
-          .withText("Test note for subscription updates")
-          .withNoteRelatedObjects(Collections.singletonList(nroInput)).build();
-      return adminMutationExecutor.createNote(NoteResourceTest.NOTE_FIELDS, noteInput);
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+    final GenericRelatedObjectInput nroInput =
+        GenericRelatedObjectInput.builder().withRelatedObjectType(subscribedObjectType)
+            .withRelatedObjectUuid(subscribedObjectUuid).build();
+    final NoteInput noteInput = NoteInput.builder().withType(NoteType.FREE_TEXT)
+        .withText("Test note for subscription updates")
+        .withNoteRelatedObjects(Collections.singletonList(nroInput)).build();
+    return withCredentials(adminUser,
+        t -> mutationExecutor.createNote(NoteResourceTest.NOTE_FIELDS, noteInput));
   }
 
   private void deleteNote(final Note note) {
-    try {
-      adminMutationExecutor.deleteNote("", note.getUuid());
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+    withCredentials(adminUser, t -> mutationExecutor.deleteNote("", note.getUuid()));
   }
 
   private String createReport() {
     // Create a DRAFT report referencing the subscribed objects
-    try {
-      final ReportInput reportInput = ReportInput.builder().withState(ReportState.DRAFT)
-          .withIntent("Test report for subscription updates").withEngagementDate(Instant.now())
-          .withLocation(
-              getLocationInput(getLocation(getSubscribedObjectUuid(LocationDao.TABLE_NAME))))
-          .withCancelledReason(ReportCancelledReason.CANCELLED_BY_ADVISOR)
-          .withReportPeople(
-              getReportPeopleInput(List.of(personToPrimaryReportAuthor(getJackJackson()),
-                  personToReportPerson(getPerson(getSubscribedObjectUuid(PersonDao.TABLE_NAME)),
-                      false),
-                  personToPrimaryReportPerson(getChristopfTopferness(), true))))
-          .withAdvisorOrg(getOrganizationInput(
-              getOrganization(getSubscribedObjectUuid(OrganizationDao.TABLE_NAME))))
-          .withTasks(List.of(getTaskInput(getTask(getSubscribedObjectUuid(TaskDao.TABLE_NAME)))))
-          .withAuthorizationGroups(List.of(getAuthorizationGroupInput(
-              getAuthorizationGroup(getSubscribedObjectUuid(AuthorizationGroupDao.TABLE_NAME)))))
-          .withNextSteps("<p>Test report next steps for subscription updates</p>")
-          .withReportText("<p>Test report intent for subscription updates</p>").build();
-      final String reportUuid =
-          jackMutationExecutor.createReport("{ uuid }", reportInput).getUuid();
-      jackMutationExecutor.submitReport("", reportUuid);
-      return reportUuid;
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+    final ReportInput reportInput = ReportInput.builder().withState(ReportState.DRAFT)
+        .withIntent("Test report for subscription updates").withEngagementDate(Instant.now())
+        .withLocation(
+            getLocationInput(getLocation(getSubscribedObjectUuid(LocationDao.TABLE_NAME))))
+        .withCancelledReason(ReportCancelledReason.CANCELLED_BY_ADVISOR)
+        .withReportPeople(
+            getReportPeopleInput(List.of(personToPrimaryReportAuthor(getJackJackson()),
+                personToReportPerson(getPerson(getSubscribedObjectUuid(PersonDao.TABLE_NAME)),
+                    false),
+                personToPrimaryReportPerson(getChristopfTopferness(), true))))
+        .withAdvisorOrg(getOrganizationInput(
+            getOrganization(getSubscribedObjectUuid(OrganizationDao.TABLE_NAME))))
+        .withTasks(List.of(getTaskInput(getTask(getSubscribedObjectUuid(TaskDao.TABLE_NAME)))))
+        .withAuthorizationGroups(List.of(getAuthorizationGroupInput(
+            getAuthorizationGroup(getSubscribedObjectUuid(AuthorizationGroupDao.TABLE_NAME)))))
+        .withNextSteps("<p>Test report next steps for subscription updates</p>")
+        .withReportText("<p>Test report intent for subscription updates</p>").build();
+    final String reportUuid = withCredentials(jackUser,
+        t -> mutationExecutor.createReport("{ uuid }", reportInput).getUuid());
+    withCredentials(jackUser, t -> mutationExecutor.submitReport("", reportUuid));
+    return reportUuid;
   }
 
-  private static void updateReport(final String reportUuid) {
-    try {
-      // Approve report, which will update report state to CANCELLED
-      adminMutationExecutor.approveReport("", null, reportUuid);
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+  private void updateReport(final String reportUuid) {
+    // Approve report, which will update report state to CANCELLED
+    withCredentials(adminUser, t -> mutationExecutor.approveReport("", null, reportUuid));
   }
 
   private void deleteReport(final String reportUuid) {
-    try {
-      adminMutationExecutor.deleteReport("", reportUuid);
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+    withCredentials(adminUser, t -> mutationExecutor.deleteReport("", reportUuid));
   }
 
-  private static void updateLocation(final String subscribedObjectUuid) {
-    try {
-      final Location subscribedObject = getLocation(subscribedObjectUuid);
-      adminMutationExecutor.updateLocation("", getLocationInput(subscribedObject));
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+  private void updateLocation(final String subscribedObjectUuid) {
+    final Location subscribedObject = getLocation(subscribedObjectUuid);
+    withCredentials(adminUser,
+        t -> mutationExecutor.updateLocation("", getLocationInput(subscribedObject)));
   }
 
-  private static Location getLocation(final String subscribedObjectUuid)
-      throws GraphQLRequestExecutionException, GraphQLRequestPreparationException {
-    return jackQueryExecutor.location(LocationResourceTest.FIELDS, subscribedObjectUuid);
+  private Location getLocation(final String subscribedObjectUuid) {
+    return withCredentials(jackUser,
+        t -> queryExecutor.location(LocationResourceTest.FIELDS, subscribedObjectUuid));
   }
 
-  private static void updateOrganization(final String subscribedObjectUuid) {
-    try {
-      final Organization subscribedObject = getOrganization(subscribedObjectUuid);
-      adminMutationExecutor.updateOrganization("", getOrganizationInput(subscribedObject));
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+  private void updateOrganization(final String subscribedObjectUuid) {
+    final Organization subscribedObject = getOrganization(subscribedObjectUuid);
+    withCredentials(adminUser,
+        t -> mutationExecutor.updateOrganization("", getOrganizationInput(subscribedObject)));
   }
 
-  private static Organization getOrganization(final String subscribedObjectUuid)
-      throws GraphQLRequestExecutionException, GraphQLRequestPreparationException {
-    return jackQueryExecutor.organization(OrganizationResourceTest.FIELDS, subscribedObjectUuid);
+  private Organization getOrganization(final String subscribedObjectUuid) {
+    return withCredentials(jackUser,
+        t -> queryExecutor.organization(OrganizationResourceTest.FIELDS, subscribedObjectUuid));
   }
 
-  private static void updatePerson(final String subscribedObjectUuid) {
-    try {
-      final Person subscribedObject = getPerson(subscribedObjectUuid);
-      adminMutationExecutor.updatePerson("", getPersonInput(subscribedObject));
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+  private void updatePerson(final String subscribedObjectUuid) {
+    final Person subscribedObject = getPerson(subscribedObjectUuid);
+    withCredentials(adminUser,
+        t -> mutationExecutor.updatePerson("", getPersonInput(subscribedObject)));
   }
 
-  private static Person getPerson(final String subscribedObjectUuid)
-      throws GraphQLRequestExecutionException, GraphQLRequestPreparationException {
-    return jackQueryExecutor.person(PersonResourceTest.FIELDS, subscribedObjectUuid);
+  private Person getPerson(final String subscribedObjectUuid) {
+    return withCredentials(jackUser,
+        t -> queryExecutor.person(PersonResourceTest.FIELDS, subscribedObjectUuid));
   }
 
-  private static void updatePosition(final String subscribedObjectUuid) {
-    try {
-      final Position subscribedObject = getPosition(subscribedObjectUuid);
-      adminMutationExecutor.updatePosition("", getPositionInput(subscribedObject));
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+  private void updatePosition(final String subscribedObjectUuid) {
+    final Position subscribedObject = getPosition(subscribedObjectUuid);
+    withCredentials(adminUser,
+        t -> mutationExecutor.updatePosition("", getPositionInput(subscribedObject)));
   }
 
-  private static Position getPosition(final String subscribedObjectUuid)
-      throws GraphQLRequestExecutionException, GraphQLRequestPreparationException {
-    return jackQueryExecutor.position(PositionResourceTest.FIELDS, subscribedObjectUuid);
+  private Position getPosition(final String subscribedObjectUuid) {
+    return withCredentials(jackUser,
+        t -> queryExecutor.position(PositionResourceTest.FIELDS, subscribedObjectUuid));
   }
 
-  private static void updateTask(final String subscribedObjectUuid) {
-    try {
-      final Task subscribedObject = getTask(subscribedObjectUuid);
-      adminMutationExecutor.updateTask("", getTaskInput(subscribedObject));
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+  private void updateTask(final String subscribedObjectUuid) {
+    final Task subscribedObject = getTask(subscribedObjectUuid);
+    withCredentials(adminUser,
+        t -> mutationExecutor.updateTask("", getTaskInput(subscribedObject)));
   }
 
-  private static Task getTask(final String subscribedObjectUuid)
-      throws GraphQLRequestExecutionException, GraphQLRequestPreparationException {
-    return jackQueryExecutor.task(TaskResourceTest.FIELDS, subscribedObjectUuid);
+  private Task getTask(final String subscribedObjectUuid) {
+    return withCredentials(jackUser,
+        t -> queryExecutor.task(TaskResourceTest.FIELDS, subscribedObjectUuid));
   }
 
-  private static void updateAuthorizationGroup(final String subscribedObjectUuid) {
-    try {
-      final AuthorizationGroup subscribedObject = getAuthorizationGroup(subscribedObjectUuid);
-      adminMutationExecutor.updateAuthorizationGroup("",
-          getAuthorizationGroupInput(subscribedObject));
-    } catch (GraphQLRequestExecutionException | GraphQLRequestPreparationException e) {
-      throw new RuntimeException(e);
-    }
+  private void updateAuthorizationGroup(final String subscribedObjectUuid) {
+    final AuthorizationGroup subscribedObject = getAuthorizationGroup(subscribedObjectUuid);
+    withCredentials(adminUser, t -> mutationExecutor.updateAuthorizationGroup("",
+        getAuthorizationGroupInput(subscribedObject)));
   }
 
-  private static AuthorizationGroup getAuthorizationGroup(final String subscribedObjectUuid)
-      throws GraphQLRequestExecutionException, GraphQLRequestPreparationException {
-    return jackQueryExecutor.authorizationGroup(AuthorizationGroupResourceTest.FIELDS,
-        subscribedObjectUuid);
+  private AuthorizationGroup getAuthorizationGroup(final String subscribedObjectUuid) {
+    return withCredentials(jackUser, t -> queryExecutor
+        .authorizationGroup(AuthorizationGroupResourceTest.FIELDS, subscribedObjectUuid));
   }
 }
